添加日志管理